<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-cash</string>
    <string name="sync">Sync</string>
    <string name="recvCash">receive Cash</string>
    <string name="sendCash">send Cash</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sendTo">Send To</string>
    <string name="howMuch">How Much?</string>
    <string name="why">Why?</string>
    <string name="when">When?</string>
    <string name="save">Save</string>
    <string name="title_activity_send">SendActivity</string>

</resources>